# TARP

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.aqua
model/backbone/pretrained/: dnabert2.py
model/backbone/untrained/: hyena.py  lstm.py
model/finetuning/classification/: __init__.py  dnabert2.py  lstm.py
model/finetuning/dnabert/: classification.py
model/finetuning/metric/: __init__.py  triplet.py
model/layers/pooling/: trainable.py
notebooks/: 00.extract.non_amr.ipynb  01.hyena_test.ipynb  02.extract_schema.ipynb  03.FrozenDnaBert2.ipynb  04.amr_to_binary.ipynb  05.transformers_test.ipynb
references/reports/slides/: RPT-Progress_Update-20250918.pptx  RPT-Progress_Update-20251030.pptx
services/datasets/: __init__.py
services/datasets/classification/: __init__.py  multilabel.py  sequence.py
services/datasets/finetuning/: classification.py  triplet.py
services/datasets/metric/: triplet.py
services/datasets/source/: sequence.py
services/datasource/: sequence.py
services/evaluation/classification/: multilabel.py
services/evaluation/losses/: multilabel.py
services/evalutation/classification/: multilabel.py
services/evalutation/loss/: multilabel.py
services/loggers/: colored.py
services/preprocessing/: augumentation.py
services/tokenizers/: __init__.py  base.py
services/tokenizers/pretrained/: dnabert.py
services/tokenizers/untrained/: __init__.py
services/training/: __init__.py
services/training/classification/: multilabel.py
services/training/finetuning/multilabel/: dnabert.py
services/training/metric/: triplet.py
src/tarp/: app.py  config.py
src/tarp/cli/logging/: __init__.py  colored.py
src/tarp/entry/: train.py
src/tarp/model/backbone/: __init__.py
src/tarp/services/datasets/: __init__.py
src/tarp/services/datasource/: sequence.py
src/tarp/services/evaluation/: __init__.py
src/tarp/utilities/: timer.py
tarp/: app.py
tarp/model/backbone/: __init__.py
tarp/services/datasets/: __init__.py
tarp/services/evaluation/: __init__.py
tarp/services/loggers/: colored.py
tarp/services/tokenizers/: __init__.py
tarp/services/training/: __init__.py
tarp/services/utilities/: seed.py
(+44 files in other folders)
