[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarp"
version = "0.1.0"
description = "TARP - A deep learning tool for predicting antimicrobial resistance from nucleotide sequences"
authors = [
    { name = "Joel Jacob", email = "j7.jacob@hdr.qut.edu.au" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "polars",
    "numpy",
    "scikit-learn",
    "torch",
    "transformers",
    "tokenizers",
    "tqdm",
    "plotly",
    "pyarrow",
    "scipy",
    "einops",
    "biopython",
    "safetensors",
    "ipykernel",
]

[project.scripts]
tarp = "tarp.app:main"
train = "tarp.train:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["temp*", "tests*"]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
]
